# iGeoVisKit

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg-configuration.json  vcpkg.json
iGeoVisKit/src/: PchApp.h  config.h  main.cpp  main.h
iGeoVisKit/src/gui/: ContrastAdvWindow.h  ContrastWindow.cpp  ContrastWindow.h  DisplayTab.cpp  DisplayTab.h  FeatureSpace.cpp  FeatureSpace.h  FeatureTab.h  GLContainer.h  GLView.cpp  GLView.h  ImageTab.cpp  ImageWindow.cpp  ImageWindow.h  MainWindow.cpp  MainWindow.h  OverviewWindow.cpp  OverviewWindow.h  PrefsWindow.h  ProgressStatusWidget.cpp  QueryTab.cpp  QueryTab.h  ROIWindow.h  ScrollBox.h  ToolTab.cpp  ToolTab.h  ToolWindow.cpp
iGeoVisKit/src/imagery/: BandInfo.cpp  CoordinateInfo.cpp  ImageFile.cpp  ImageHandler.cpp  ImageHandler.h  ImageProperties.cpp  ImageProperties.h  ImageTileSet.cpp  ImageTileSet.h  ROI.cpp  ROI.h  ROIFile.cpp  ROIFile.h  ROISet.cpp  ROISet.h  Renderer.h
iGeoVisKit/src/opengl/: FeatureSpaceGL.cpp  FeatureSpaceGL.h  GLText.h  ImageGL.cpp  ImageGL.h  ImageViewport.cpp  ImageViewport.h  OpenGLContext.cpp  OpenGLContext.h  OverviewGL.cpp  OverviewGL.h  Renderer.cpp  Renderer.h  ShaderProgram.h  ViewportListener.cpp  ViewportListener.h
iGeoVisKit/src/utils/: BatchIniFile.cpp  Console.cpp  IniFile.cpp  IniFile.h  Settings.cpp  Settings.h  StringUtils.cpp  StringUtils.h
resources/: app.manifest  app.qrc  app.rc
src/: PchApp.h  main.cpp  resources.h
src/gui/: ContrastAdvWindow.cpp  DisplayTab.cpp  DisplayTab.h  FeatureSpace.cpp  FeatureTab.cpp  GLContainer.cpp  GLView.cpp  GLView.h  ImageTab.cpp  ImageTab.h  ImageWindow.cpp  ImageWindow.h  MainWindow.cpp  MainWindow.h  OverviewWindow.cpp  OverviewWindow.h  PrefsWindow.cpp  ProgressStatusWidget.h  ROIWindow.cpp  ScrollBox.cpp  ToolWindow.h
src/imagery/: BandInfo.h  CoordinateInfo.h  ImageFile.cpp  ImageFile.h  ImageHandler.cpp  ImageHandler.h  ImageProperties.cpp  ImageProperties.h  ImageTileSet.h  ROI.cpp  ROI.h  ROIFile.cpp  ROISet.cpp  ROISet.h
src/opengl/: FeatureSpaceGL.h  GLText.cpp  GLUtils.cpp  GLUtils.h  ImageGL.cpp  ImageGL.h  ImageViewport.cpp  OpenGLContext.cpp  OverviewGL.cpp  OverviewGL.h  PointsHash.h  Renderer.cpp  ShaderProgram.cpp  ViewportListener.h  point_texture.c
src/utils/: BatchIniFile.cpp  BatchIniFile.h  Console.cpp  Console.h  IniFile.cpp  Settings.cpp
vcpkg/triplets/: x64-linux-dynamic-debug.cmake  x64-linux-dynamic-release.cmake  x64-linux-dynamic.cmake  x64-windows-dynamic-debug.cmake  x64-windows-dynamic-release.cmake  x64-windows-dynamic.cmake
